[workspace]
resolver = "2"
members = [
    "escrow",
    "staking", 
    "vault",
    "marketplace",
    "governance"
]

[workspace.dependencies]
solana-program = "~1.18.0"
borsh = "1.0.0"
thiserror = "1.0.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
arrayref = "0.3.7"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
