[workspace]
resolver = "2"
# members = ["escrow", "staking", "vault", "marketplace", "governance"]
members = ["escrow"]

[workspace.dependencies]
solana-program = "1.18.26"
borsh = "1.6.0"
thiserror = "2.0.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
