[workspace]
resolver = "2"
# members = ["escrow", "staking", "vault", "marketplace", "governance"]
members = ["escrow"]

[workspace.dependencies]
borsh = { version = "1.6.0", features = ["derive"] }
thiserror = "2.0.17"
spl-token-interface = "2"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
