[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
borsh = {workspace = true}
solana-program = {workspace = true}
spl-token = {workspace = true}
thiserror = {workspace = true}

[features]
no-entrypoint = []
# [package]
# name = "escrow"
# version = "0.1.0"
# edition = "2021"

# [lib]
# crate-type = ["cdylib", "lib"]

# [dependencies]
# solana-program = { workspace = true }
# borsh = { workspace = true }
# thiserror = { workspace = true }
# spl-token = { workspace = true }
# spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
# spl-associated-token-account = { workspace = true }
# arrayref = { workspace = true }

# [features]
# no-entrypoint = []
