[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
borsh = {workspace = true}
solana-account-info = "3.1.0"
solana-borsh = "3.0.0"
solana-cpi = "3.1.0"
solana-program-entrypoint = "3.1.1"
solana-program-error = { version = "3.0.0", features = ["borsh"] }
solana-program-pack = "3.0.0"
solana-pubkey = { version = "4.0.0", features = ["borsh", "curve25519"] } #do not need the curve25519 for actual sbf build, only used here for rust analyzer to work
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-sysvar = { version = "3.1.1", features = ["bincode"] }
spl-token-interface = {workspace = true}
thiserror = {workspace = true}

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dev-dependencies]
litesvm = "0.4"
spl-token = "4.0.0"

# [package]
# name = "escrow"
# version = "0.1.0"
# edition = "2021"

# [lib]
# crate-type = ["cdylib", "lib"]

# [dependencies]
# solana-program = { workspace = true }
# borsh = { workspace = true }
# thiserror = { workspace = true }
# spl-token = { workspace = true }
# spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
# spl-associated-token-account = { workspace = true }
# arrayref = { workspace = true }

# [features]
# no-entrypoint = []
